--- a/src/app/index.html
+++ b/src/app/index.html
@@ -1,5 +1,5 @@
 <!--TODO-->
-<html ng-app='app'>
+<html ng-app='dataTable'>
 	<head>
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
 		<script src="app.js"></script>
