test draggable component

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -1,13 +1,17 @@
 <!--TODO-->
-<html ng-app='dataTable'>
+<html ng-app='test'>
 	<head>
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
 		<script src="app.js"></script>
-		<script src="app/dataTableDirective.js"></script>
+		<script src="directives/myDraggable.js"></script>
+		<script src="directives/myTable.js"></script>
+		<script src="directives/myColumn.js"></script>
+		<script src="directives/myRow.js"></script>
+		<script src="directives/myCell.js"></script>
 	</head>
 
 	<body>
-			
+		<my-draggable>Hello World</my-draggable>	
 	</body>
 
 
